=== 0.0.21 2009-10-26

* fixed the formatting issue while displaying missing index in diagnostic section 

=== 0.0.20 2009-10-22

* warning message if JavaScript is disabled

=== 0.0.19 2009-10-20

* ability to pass :find_conditions to settings so that models with to_param method could
override the sql that is built by admin_data

=== 0.0.18 2009-10-16

* changed theme from warehouse to dark because the association info on the right 
hand side was not appearing correctly
* homepage should have main tab selected
* changed urls to support models that override to_param to other than id
* fixed the sorting order. model a, model B and model A/Q was being sorted
as A,Q,B instead of A,B,Q.

=== 0.0.17 2009-10-08

* drop down of klasses is now available at the center of home page
* current model will be selected in the drop down  

=== 0.0.16 2009-10-07

* form UI foreign keys are dropdown (display name attribute if it exists and id otherwise)
* form UI date fields use date_select (with free text year since we cannot guess a good range)
* form UI refactored to use form_for instead of form_tag and hadcoded html
     
=== 0.0.15 2009-10-06

* cache the list of models
* advance search refactoring
* jQuery UI datepicker for date field
* advance search now shows validation error for integer and date fields
* log.js for easy logging in JavaScript

=== 0.0.14 2009-10-05

* while editing match was being done for hard coded value id. Now it looks for klass.primary_key 

=== 0.0.13 2009-10-04

* fixed IE7 bug 

=== 0.0.12 2009-10-04

* fixed bug regarding integer values not appearning in listing 
* better indentation

=== 0.0.11 2009-10-01

* Major contribution in this release by Alex Rothenberg. http://github.com/alexrothenberg 
* this plugin now treats each model as a restful resource. 
* security fix and test for it
* commented out offending code for has_one relationship
* has_one and habtm relationships along with test would be taken up in next release

=== 0.0.11 2009-09-28
